--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Expander</title>
+
+    <title>AI Image Expander - Free Online Tool</title>
+    <meta name="description" content="Expand and enhance your images using AI for free. No signup required. Try Image Expander AI now.">
+    <meta name="keywords" content="AI Image Expander, free AI tool, image enhancement, expand image online">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
