--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Expand and enhance your images using AI for free. No signup required. Try Image Expander AI now.">
     <meta name="keywords" content="AI Image Expander, free AI tool, image enhancement, expand image online">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5351996954376656"
+     crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +46,15 @@
 </script>
 </head>
   <body class="bg-white dark:bg-gray-900 font-sans antialiased">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5351996954376656"
+         data-ad-slot="1103581418"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
