--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>AI Image Expander - Free Online Tool</title>
-    <meta name="description" content="Expand and enhance your images using AI for free. No signup required. Try Image Expander AI now.">
-    <meta name="keywords" content="AI Image Expander, free AI tool, image enhancement, expand image online">
+    <title>AI Image Expander - Free Online Outpainting Tool</title>
+    <meta name="description" content="Expand your images with AI for free. Use our AI Image Expander to outpaint and extend your photos, illustrations, and artwork seamlessly. No signup required.">
+    <meta name="keywords" content="AI image expander, outpainting, image extender, AI photo editor, free AI tool, generative fill, image enhancement, expand image online">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5351996954376656"
      crossorigin="anonymous"></script>
