--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>AI Image Expander - Free Online Outpainting Tool</title>
-    <meta name="description" content="Expand your images with AI for free. Use our AI Image Expander to outpaint and extend your photos, illustrations, and artwork seamlessly. No signup required.">
-    <meta name="keywords" content="AI image expander, outpainting, image extender, AI photo editor, free AI tool, generative fill, image enhancement, expand image online">
+    <meta name="description" content="Expand your images with AI for free. Use our AI Image Expander to outpaint and extend your photos, illustrations, and artwork seamlessly. Learn how it works and see our features. No signup required.">
+    <meta name="keywords" content="AI image expander, outpainting, image extender, AI photo editor, free AI tool, generative fill, image enhancement, expand image online, how to expand image, image expander tool">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5351996954376656"
      crossorigin="anonymous"></script>
@@ -46,15 +46,6 @@
 </script>
 </head>
   <body class="bg-white dark:bg-gray-900 font-sans antialiased">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5351996954376656"
-         data-ad-slot="1103581418"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
